--- a/0WEB/portafolio.html
+++ b/0WEB/portafolio.html
@@ -4,9 +4,38 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Portafolio</title>
+    <link rel="stylesheet" href="./css/portafolio.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Festive&family=Open+Sans:wght@300;400;500;700&display=swap" rel="stylesheet">
 </head>
 <body>
-    hjghsdfjasdgfg
+    <header>
+        <div id="logo" class="item">
+            <h1>Mi portafolio</h1>
+        </div>
+        <nav class="item">
+            <ul>
+                <li>
+                    <a href="#">Inicio</a>
+                </li>
+                <li>
+                    <a href="#">Sobre Mi</a>
+                </li>
+                <li>
+                    <a href="#">Portafolio</a>
+                </li>
+                <li>
+                    <a href="#">Contacto</a>
+                </li>
+            </ul>
+        </nav>
+    </header>
+    <section id="main">
+            <video autoplay muted controls= "false">
+                <source src="./img/test.mp4" type="video/mp4">
+            </video>
+    </section>
 </body>
 </html>
