--- a/0WEB/portafolio.html
+++ b/0WEB/portafolio.html
@@ -34,8 +34,19 @@
     </header>
     <section id="main">
             <video autoplay muted controls= "false">
-                <source src="./img/test.mp4" type="video/mp4">
+                <source src="./img/text.mp4" type="video/mp4">
             </video>
+            <div id="overlay">
+                <h2>
+                    Bienvenidos a mi portafolio
+                </h2> 
+            <h3>
+                    Diana Medrano <br>
+                    Desarrollador Web <br>
+                    <br>
+                    <a href="#" class="btn btn-primary">Contactar</a>
+            </h3>
+        </div>
     </section>
 </body>
 </html>
