--- a/0WEB/html/portafolio.html
+++ b/0WEB/html/portafolio.html
@@ -12,6 +12,7 @@
     <link href="./css/all.min.css" rel="stylesheet" />
       <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
       <link rel="stylesheet" href="./css/mediaquerys.css">
+      <link rel="stylesheet" href="./css/print.css" media="print">
 
 </head>
 <body>
